# elo-rust

./: .gitignore  .releaserc.json  ARCHITECTURE.md  CHANGELOG.md  COVERAGE_IMPROVEMENT_SUMMARY.md  CRITICAL_VULNERABILITIES_FOUND.md  Cargo.toml  EXAMPLES.md  FINALIZATION_COMPLETE.md  FINAL_SECURITY_REPORT.md  PRD.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_0.4.0.md  ROADMAP.md  SECRETS_SETUP.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_FIXES.md  SECURITY_FIX_SUMMARY.txt  SECURITY_INCIDENT_RESOLVED.md  SECURITY_VULNERABILITIES.md  SETUP_COMPLETE.md  TESTING.md  TEST_COVERAGE_REPORT.md  cargo-deny.toml  commitlint.config.js  release.toml  tarpaulin-report.html
.github/: GITHUB_SETUP_CHECKLIST.md  SECURITY_WORKFLOWS.md  dependabot.yml  release-template.md
.github/workflows/: ci.yml  publish.yml  release.yml  security.yml
.phases/: README.md  phase-01-setup.md  phase-02-codegen.md  phase-03-stdlib.md  phase-04-macros.md  phase-05-finalize.md
benches/: parsing.rs
docs/: ARCHITECTURE_ASSESSMENT.md  AUDIT_EVIDENCE.md  AUDIT_PLAN.md  AUDIT_SUMMARY.md  AUTOMATION_COMPLETE.md  AUTOMATION_SETUP_GUIDE.md  CODE_STYLE_COMPARISON.md  CRATES_IO_PUBLICATION.md  MATURITY_ASSESSMENT.md  PROJECT_COMPLETION_SUMMARY.md  PR_READINESS.md  PR_SUBMISSION_COMPLETE.md  PUBLICATION_READY.md  QUALITY_METRICS.md  QUICK_START_AUTOMATION.md  README.md  RELEASE_TRIGGERED.md  SUBMISSION_STATUS.md
examples/: actix_validator.rs  axum_validator.rs  simple_validator.rs
src/: lib.rs  security.rs
src/ast/: mod.rs  visitor.rs
src/codegen/: ast_to_code.rs  errors.rs  expressions.rs  functions.rs  mod.rs  operators.rs  optimization.rs  temporal.rs  type_inference.rs  types.rs
src/parser/: error.rs  lexer.rs  mod.rs
src/runtime/: mod.rs  temporal.rs  value.rs
src/stdlib/: array.rs  datetime.rs  mod.rs  string.rs  types.rs
tests/: advanced_expressions.rs  array_functions.rs  ast_visitor.rs  cli_integration.rs  codegen_advanced.rs  codegen_coverage.rs  datetime_functions.rs  edge_case_coverage.rs  error_handling.rs  function_error_paths.rs  function_generator_extended.rs  integration.rs  lib.rs  logical_ops.rs  macro_usage.rs  operators.rs  string_functions.rs  temporal_integration.rs  type_mapping.rs  type_system_advanced.rs
tests/codegen/: mod.rs
tests/common/: mod.rs
