[package]
name = "elo-rust"
version = "0.4.0"
edition = "2021"
authors = ["FraiseQL Project"]
description = "Rust code generation target for ELO validation language"
license = "MIT"
repository = "https://github.com/evoludigit/elo-rust"
keywords = ["validation", "elo", "code-generation", "rust"]
categories = ["development-tools::procedural-macro-helpers"]
exclude = [
    "target/",
    ".git/",
    ".github/",
    "docs/",
    ".gitignore",
    ".releaserc.json",
    "release.toml",
    "commitlint.config.js",
    "CHANGELOG.md",
    "RELEASE_GUIDE.md",
]

[lib]
name = "elo_rust"
path = "src/lib.rs"

[[example]]
name = "simple_validator"
path = "examples/simple_validator.rs"

[[example]]
name = "actix_validator"
path = "examples/actix_validator.rs"
required-features = ["serde-support"]

[[example]]
name = "axum_validator"
path = "examples/axum_validator.rs"
required-features = ["serde-support"]

[[bin]]
name = "elo"
path = "src/bin/elo.rs"

[dependencies]
# AST and parsing support
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Standard library support
regex = "1.10"
chrono = "0.4"

# Security: Unix-specific file operations (O_NOFOLLOW)
libc = "0.2"

# For testing and examples
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
axum = "0.7"

[features]
default = ["runtime"]
runtime = []
serde-support = ["serde", "serde_json"]

# Benchmarks added in Phase 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
